Last_n: do not save snapshot of custom tabs.

Custom tabs are run almost exactly as regular tabs and last_n was saving
snapshots of them when they were being hidden. This is not the right thing
to do because these tabs are tabs are generally short lived unless they
are transferred into Chrome by the user.

This change adds the ability for native code to check if an Android tab
is a custom tab and uses this new functionality to avoid saving last_n
snapshots if that's the case.

BUG=636048

Review-Url: https://codereview.chromium.org/2773273002
Cr-Commit-Position: refs/heads/master@{#460242}

Former-commit-id: 6619bb4ebd6d8a47b7a0a0185d86bc90d7f80f56