chrome/browser/android/offline_pages/recent_tab_helper.h
@@ -59,6 +59,7 @@ class RecentTabHelper
     // There is no expectations that tab_id is always present.
     virtual bool GetTabId(content::WebContents* web_contents, int* tab_id) = 0;
     virtual bool IsLowEndDevice() = 0;
+    virtual bool IsCustomTab(content::WebContents* web_contents) = 0;
   };
   void SetDelegate(std::unique_ptr<RecentTabHelper::Delegate> delegate);
 
