chrome/browser/android/tab_android.h
@@ -136,6 +136,11 @@ class TabAndroid : public CoreTabHelperDelegate,
                         bool icon_url_changed,
                         const gfx::Image& image) override;
 
+  // Returns true if this tab is currently presented in the context of custom
+  // tabs. Tabs can be moved between different activities so the returned value
+  // might change over the lifetime of the tab.
+  bool IsCurrentlyACustomTab();
+
   // Methods called from Java via JNI -----------------------------------------
 
   void Destroy(JNIEnv* env, const base::android::JavaParamRef<jobject>& obj);
